kubernetes/monitoring/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      sub_filter_once off;
      sub_filter_types *;
      sub_filter 'href="/' 'href="/monitor/';
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /monitor(/|$)(.*)
            backend:
              service:
                name: monitor-web-service
                port:
                  number: 8087
